# SFMT

./: .gitattributes  .gitignore  CHANGE-LOG.txt  CMakeLists.txt  FILES.txt  LICENSE.txt  Makefile  Makefile.aarch64  Makefile.armv7a  Makefile.me  README.txt  SFMT-alti.c  SFMT-alti.h  SFMT-alti64.c  SFMT-avx256.h  SFMT-neon.h  SFMT-params.h  SFMT-params1279.h  SFMT-params132049.h  SFMT-params2281.h  SFMT-params4253.h  SFMT-params44497.h  SFMT-params607.h  SFMT.11213.64.out.txt  SFMT.1279.64.out.txt  SFMT.132049.64.out.txt  SFMT.19937.64.out.txt  SFMT.216091.64.out.txt  SFMT.2281.64.out.txt  SFMT.4253.64.out.txt  SFMT.44497.64.out.txt  SFMT.607.64.out.txt  SFMT.86243.64.out.txt  SFMT.c  SFMT.h  Saito.tex  check.sh  dist-hikaku.xls  doxygen.cfg  history.txt  (+19 more)
dSFMT/D11-result/: csv2param.awk  make_csv.rb  make_params.rb
dSFMT/proto/: Makefile  chk-bm.cpp  chk-shortest.cpp  chk-shortestL.cpp  chk-shortestN.cpp  chk-shortestNL.cpp  dSFMT-params607.h  dSFMT-ref-st.c  dsfmt-afst.h  dsfmt-ref-st.h  dsfmt-st.h  dsfmt-util.cpp  dsfmtL-st.h  dsfmtL-util.h  dsfmtL2-st.h  dsfmtL2-util.cpp  dsfmtL2-util.h  dsfmtN-st.h  dsfmtN-util.cpp  dsfmtN-util.h  dsfmtNL-util.h  mt19937blk-sse2.c  search-parity-vector.cpp  search.cpp  searchL2.cpp  searchN.cpp  searchNL.cpp  sfmtD01-st.c  sfmtD02-st.c  sfmtD03-st.c  sfmtD04-st.c  sfmtD05-st.c  sfmtD06-st.c  sfmtD07-st.c  sfmtD08-st.c  sfmtD09-st.c  sfmtD10-st.c  sfmtD11-afst.c  sfmtD11-st.c  sfmtDN1-st.c  (+33 more)
dSFMT/proto2/: Makefile  chi-zero.cpp  chk-charac.cpp  chk2-shortest.cpp  fill-params.cpp  get-charactor.cpp  get-fix.cpp  get2-charactor.cpp  make_test_file.rb  search-parity-vector.cpp  search2-parity-vector.cpp  sfmtDPz3.cpp  sfmtDPz4.cpp  sfmtDPz5.cpp  sfmtDPz6.cpp  sfmtDPz7.cpp  sfmtDPz8.cpp  sfmtDPz9.cpp  sfmtDPza.cpp  sfmtDPza2.cpp  sfmtDPzb.cpp  sfmtDPzc.cpp  test-gen.cpp  test-minpoly.cpp  (+1 more)
jump/: CHANGE-LOG.txt  FILES.txt  Makefile  Makefile.me  SFMT-common.h  SFMT-hardware.h  SFMT-jump.c  SFMT-jump.h  SFMT-params.h  SFMT-params11213.h  SFMT-params132049.h  SFMT-params19937.h  SFMT-params216091.h  SFMT-params2281.h  SFMT-params4253.h  SFMText.hpp  SFMTst-old.h  SFMTst-sse2.h  SFMTst.c  SFMTst.h  calc-characteristic.cpp  calc-characteristic.h  calc-jump.cpp  change.awk  characteristic.11213.txt  characteristic.86243.txt  characteristic.default.132049.txt  characteristic.default.19937.txt  characteristic.default.216091.txt  characteristic.default.2281.txt  check-jump.sh  do-jump.c  doxygen.cfg  mainpage.txt  make-make.awk  readme-jp.html  readme.html  sample.c  sample1.c  sample2.c  (+3 more)
old-sfmt/: Makefile  test32.c
proto/: 1  Makefile  check-param.cpp  chk-lcm.cpp  chk-p1-shortest.cpp  chk-p2-shortest.cpp  chk-shortest.cpp  chk-shortest32.cpp  debug.c  debug.h  ht-rnd-st.c  ht-st.h  kiyaku_sfmt4a128.c  mt-search.cpp  param-search2-521  param-search3-521  param-search4-521  param-search4a-521  param-search521  res-sfmt6-128-521.txt  res-sfmt9-521.txt  res5-128-521.mac.20060218.01.txt  result521.mac.20060121.txt  result8w-19937.magi05.20060624.txt  search-dist.cpp  search-kiyaku.cpp  search-lung-p1.cpp  search-lung.cpp  search-parity-vector.cpp  search-parity-vector0.cpp  search.cpp  search2.cpp  search9-all.cpp  sfmt-cls.h  sfmt-st.h  sfmt.c  sfmt.h  sfmt2.c  sfmt3.c  sfmt4.c  (+124 more)
release/: Makefile  c99.h  sfmt.c  sfmt.h  sfmt19937-alti32.c  sfmt19937-alti64.c  sfmt19937-big64.c  sfmt19937-sse2.c  sfmt19937.c  sfmt_alti.c  test.c  test32.c  test64.c  test_alti.c  test_alti32.c  test_alti64.c  test_big64.c  test_sse32.c  test_sse64.c
result/: do-sep.sh  sep2.rb
src/: Makefile  chk-irrs-param.cpp  chk-shortest.cpp  chk32-shortest.cpp  cryptMT.initial.txt  ht-chk-shortest.cpp  ht-rnd-st.c  ht-shortbase128.cpp  ht-shortbase128.h  ht-st.h  mt32-st.c  mt32-st.h  result128-521.txt  search-lung-easy.cpp  search-lung.cpp  search128.cpp  search32.cpp  sfmt-base.h  sfmt-st.c  sfmt-st.cpp  sfmt-st.h  sfmt-st88q1.c  sfmt-util.cpp  sfmt-util.h  sfmt.c  sfmt.h  sfmt32-st.c  sfmt32-st.h  sfmt88q1-st.cpp  sfmtX7-st.cpp  sfmtX78-st.cpp  shortbase128.cpp  shortbase128.h  shortbase32.cpp  shortbase32.h  test-gen-st-cpp.cpp  test-gen-st.c  test32-gen-st.c  test_gen.c  util.cpp
test/: test-parity.cpp  test-res53.c
tex/: delta.eps  fill_array.eps  little-endian.eps  logo.bb  mt-a.eps  sfmt-mcqmc2006.tex  sfmt-slide.tex  view.eps
tools/: 11213.txt  1279.txt  19937.txt  2203.txt  4253.txt  521.txt  Makefile  dumpP37.c  dumpPMT.c  dumpX78.c  irr11213.txt  irr1279.txt  irr19937.txt  irr2203.txt  irr4253.txt  irr521.txt  kiyaku  kiyaku.cpp  pmt32-st.c  sfmtP37-st.c  sfmt_p1_st.h  well19937a.h
variation/Piatyszek/libdsfmt-1.1.0/: AUTHORS  CHANGE-LOG.txt  ChangeLog  FILES.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.in  Makefile.orig  NEWS  README  README.txt  autogen.sh  check.sh  config.h  config.h.in  config.status  configure  configure.ac  dSFMT-alti.h  dSFMT-params.h  dSFMT-params11213.h  dSFMT-params1279.h  dSFMT-params4423.h  dSFMT-sse2.h  dSFMT.1279.out.txt  dSFMT.132049.out.txt  dSFMT.44497.out.txt  dSFMT.607.out.txt  dSFMT.86243.out.txt  dSFMT.c  libtool  test-lib  test-lib.c
zero-excess/: Makefile  count1bit.c  dumpP37.c  dumpPMT.c  dumpWELL.c  dumpX78.c  pmt32-st.h  sfmtX78-st.c  well19937a.c
(+1036 files in other folders)
